manifest/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubevirt-dashboard-nodeport
  namespace: kubevirt-dashboard
spec:
  selector:
    app: kubevirt-dashboard
  ports:
    - name: console
      port: 80
      targetPort: web
      protocol: TCP
      nodePort: 30000
  type: NodePort
