manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-dashboard
  labels:
    app: kubevirt-dashboard
  namespace: kubevirt-dashboard
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
spec:
  defaultBackend:
    service:
      name: kubevirt-dashboard
      port:
        number: 80
  rules:
    - host: "kubevirt-dashboard.jimyag.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubevirt-dashboard
                port:
                  number: 80
